--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,13 +13,21 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="background">
-<!--<a href="https://docs.google.com/document/d/1Gxge2_8-U16DAEXcHfV73xlRAJmqlBCkBnh5tFU4vko/edit#heading=h.n769kv34o38z" target="_blank">Design Doc</a>-->
-<!--<br>-->
-<!--<a href="https://github.com/bitDecayGames/DUArcade2016" target="_blank">GitHub</a>-->
-<!--<h1 id="title" class="center">TypeScript App</h1>-->
-<div id="contentContainer" class="centered-div">
-    <div id="content"></div>
-</div>
+
+<body class="background center">
+    <div>
+        <!-- TODO Add main site link here -->
+        <a href="https://github.com/bitDecayGames" target="_blank">
+            <img class="logo" src="img/icons/logo.png"></img>
+        </a>
+        <span class="titleText">bitDecay Games Presents</span>
+        <a href="https://github.com/bitDecayGames/DUArcade2016" target="_blank">
+            <img class="icon" src="img/icons/github.png"></img>
+        </a>
+    </div>
+    <div id="contentContainer" class="centered-div">
+        <div id="content"></div>
+    </div>
 </body>
+
 </html>
